[project]
name = "transform"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "sunwoo", email = "summerham22@gmail.com"},
]
dependencies = [
    "Load @ git+https://github.com/play-gogo/Load.git@ice",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
call_trans = 'transform.trans:ice_sunwoo'

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
